Document PPDG/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual_cost_per_contact__c</fullName>
        <formula>ActualCost  /  Total_Contacts_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual cost per Contact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_response_rate__c</fullName>
        <formula>Total_Responses__c  /    Total_Contacts_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual response rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Prospects: internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects: external</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dormant customers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Closing_date_of_prize_draw__c</fullName>
        <label>Closing date of prize draw</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_rate_achieved__c</fullName>
        <formula>Total_Responses__c  /  Total_Contacts_Target__c</formula>
        <label>Conversion rate achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_per_opportunity_actual__c</fullName>
        <formula>ActualCost / NumberOfOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per opportunity actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_opportunity_target__c</fullName>
        <formula>BudgetedCost / Opportunity_Target_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per opportunity target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_response__c</fullName>
        <formula>BudgetedCost  /    NumberOfResponses</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_response_actual__c</fullName>
        <formula>ActualCost  /  Total_Responses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per response actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_response_target__c</fullName>
        <formula>BudgetedCost  /  Response_Target_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per response target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_sale_actual__c</fullName>
        <formula>ActualCost / Sales_achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per sale actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_sale_target__c</fullName>
        <formula>BudgetedCost / Sales_Target_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per sale target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>For use with Campaigns to capture data source</description>
        <label>Data Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Test Description field</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_response__c</fullName>
        <formula>ExpectedResponse  *  NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Leads__c</fullName>
        <formula>NumberOfLeads  +  NumberOfOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBB_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IBB Product</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Product__c</fullName>
        <label>Key Product</label>
        <picklist>
            <picklistValues>
                <fullName>HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Savngs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL ( rent only)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Line_associated_to__c</fullName>
        <label>Line associated to</label>
        <picklist>
            <picklistValues>
                <fullName>HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Code__c</fullName>
        <label>Marketing Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_or_Non_Marketing__c</fullName>
        <label>Marketing or Non Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_calls_recieved__c</fullName>
        <label>Calls received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_coupon_responses__c</fullName>
        <label>Coupon responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_website_responses__c</fullName>
        <label>Website responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Lead generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Conversion_Achieved__c</fullName>
        <formula>NumberOfOpportunities  /  Total_Responses__c</formula>
        <label>Opportunity Conversion Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_ROI__c</fullName>
        <formula>AmountWonOpportunities    /  ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Target_No__c</fullName>
        <formula>Response_Target_No__c * Response_to_opportunity__c</formula>
        <label>Opportunity Target (No)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_responses__c</fullName>
        <label>Online Coupon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_or_Business__c</fullName>
        <label>Personal or Business?</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prize_draw__c</fullName>
        <label>Prize draw?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipLabel>Campaigns (Product)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <formula>AmountWonOpportunities   / ActualCost</formula>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Response_Target_No__c</fullName>
        <formula>Total_Contacts_Target__c  *  Response_Target__c</formula>
        <label>Response Target (No)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Target__c</fullName>
        <label>Response Target (%)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Response_to_opportunity__c</fullName>
        <label>Response to opportunity (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Conversion_Achieved__c</fullName>
        <formula>NumberOfWonOpportunities / NumberOfOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Conversion Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Target_No__c</fullName>
        <formula>Sales_Target__c * Opportunity_Target_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Target (No)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <label>Sales Target (%)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_achieved__c</fullName>
        <formula>NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Cost_per_Contact__c</fullName>
        <formula>BudgetedCost  /  Total_Contacts_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Cost per Contact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_number__c</fullName>
        <label>Telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Contacts_Target__c</fullName>
        <label>Total Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <formula>Number_of_calls_recieved__c  +  Number_of_coupon_responses__c + Number_of_website_responses__c  +  Other_responses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xx__c</fullName>
        <formula>HierarchyNumberOfOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Key_Product__c</columns>
        <columns>IBB_Product__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Audience__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.X2013</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Key_Product__c</columns>
        <columns>IBB_Product__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Audience__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>BTL_Rent_Only_Campaign_Overview</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_calls_recieved__c</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Number_of_coupon_responses__c</columns>
        <columns>Number_of_website_responses__c</columns>
        <columns>Other_responses__c</columns>
        <columns>Total_Responses__c</columns>
        <columns>Actual_response_rate__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>Cost_per_response__c</columns>
        <columns>Prize_draw__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Rent Only</value>
        </filters>
        <label>BTL Rent Only Campaign Overview</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CallCentreManager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MarketingTeam</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Campaign_responses</fullName>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Telephone_number__c</columns>
        <columns>URL__c</columns>
        <columns>Number_of_calls_recieved__c</columns>
        <columns>Number_of_coupon_responses__c</columns>
        <columns>Number_of_website_responses__c</columns>
        <columns>Other_responses__c</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Live</value>
        </filters>
        <label>Campaign responses - live</label>
        <sharedTo>
            <role>MarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Direct_Mail</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Direct Mail</value>
        </filters>
        <label>Direct Mail</label>
    </listViews>
    <listViews>
        <fullName>HPP_campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Key_Product__c</columns>
        <columns>IBB_Product__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Audience__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Product__c</field>
            <operation>includes</operation>
            <value>HPP</value>
        </filters>
        <label>HPP campaigns</label>
    </listViews>
    <listViews>
        <fullName>Marketing_campaign_view_2012</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Marketing_Code__c</columns>
        <columns>Marketing_or_Non_Marketing__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Audience__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>Number_of_calls_recieved__c</columns>
        <columns>Number_of_website_responses__c</columns>
        <columns>Number_of_coupon_responses__c</columns>
        <columns>Other_responses__c</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.X2012</value>
        </filters>
        <label>Marketing campaign view 2012</label>
        <sharedTo>
            <role>HeadofMarketing</role>
            <role>MarketingTeam</role>
            <role>ProductManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_campaign_view_2013</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Marketing_Code__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Audience__c</columns>
        <columns>Total_Contacts_Target__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Expected_response__c</columns>
        <columns>Number_of_calls_recieved__c</columns>
        <columns>Number_of_website_responses__c</columns>
        <columns>Number_of_coupon_responses__c</columns>
        <columns>Other_responses__c</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>Actual_response_rate__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.X2013</value>
        </filters>
        <filters>
            <field>Marketing_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Marketing campaign view 2013</label>
        <language>en_US</language>
        <sharedTo>
            <role>HeadofMarketing</role>
            <role>MarketingTeam</role>
            <role>ProductManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Response_Entry</fullName>
        <columns>Marketing_Code__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Number_of_calls_recieved__c</columns>
        <columns>Number_of_coupon_responses__c</columns>
        <columns>Number_of_website_responses__c</columns>
        <columns>Other_responses__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Telephone_number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Response Entry</label>
    </listViews>
    <listViews>
        <fullName>X2013_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.X2013</value>
        </filters>
        <label>2013 Campaigns</label>
    </listViews>
    <listViews>
        <fullName>X2013_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Marketing_or_Non_Marketing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>2013</value>
        </filters>
        <label>2013 Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>X2012</fullName>
        <active>true</active>
        <description>Current record type</description>
        <label>2012</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013</fullName>
        <active>true</active>
        <description>New record type for 2013</description>
        <label>2013</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>